/info/userinfo api to get user about logged in user
